deployment/api-endpoint.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-api
  template:
    metadata:
      labels:
        app: portfolio-api
    spec:
      containers:
        - name: portfolio-api
          image: anilsezer/portfolioapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: dockerlogin
