deployment/alert-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-service
  namespace: observability
  labels:
    app: alertmanager
spec:
  type: NodePort
  selector:
    alertmanager: kube-prom-stack-kube-prome-alertmanager
  ports:
  - name: web
    port: 9093
    targetPort: 9093
    nodePort: 31389
