deployment/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: observability
spec:
  selector:
    app.kubernetes.io/instance: kube-prom-stack
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
