deployment/ingress-nginx-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080  # choose an available port
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443  # choose an available port
  selector:
    app.kubernetes.io/name: ingress-nginx
