deployment/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: observability
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: kube-prom-stack-kube-prome-prometheus
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/managed-by: prometheus-operator
    operator.prometheus.io/name: kube-prom-stack-kube-prome-prometheus
    prometheus: kube-prom-stack-kube-prome-prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 31388
