deployment/ingress-new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-new-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - anil-sezer.com
      secretName: portfolio-ingress-tls
  rules:
    - host: anil-sezer.com
      http:
        paths:
          - backend:
              service:
                name: portfolio-service
                port:
                  number: 80
            path: /
            pathType: Exact
