deployment/portfolio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
spec:
  tls:
    - hosts:
        - anil-sezer.com
      secretName: anil-sezer-tls
  rules:
    - host:  anil-sezer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80
